--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -25,20 +25,14 @@
                 <h5 class="modal-title" id="exampleModalLongTitle">Create A New Map!!</h5>
             </div>
             <div class="modal-body">
-<!--                The Input Form-->
-                <form href= "/createProject">
+                <!--                The Input Form-->
+                <form href="/createProject">
                     <div class="form-group form-inline">
-                        <label >Orientation:</label>
-                        <div class="dropdown" style="padding-left: 20px">
-                            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                Isometric
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">Isometric</a>
-                                <a class="dropdown-item" href="#">Orthogonal</a>
-                            </div>
-                        </div>
+                        <label>Orientation:</label>
+                        <select id="orientation" style="padding-left: 10px">
+                            <option value="Isometric">Isometric</option>
+                            <option value="Orthogonal">Orthogonal</option>
+                        </select>
                     </div>
 
                     <div class="form-group">
@@ -51,16 +45,17 @@
                     </div>
                     <div class="form-group">
                         <label for="tileWidth">Tile Width:</label>
-                        <input type="text" class="form-control" id="tileWidth" value="32" placeholder="Enter tile width">
+                        <input type="text" class="form-control" id="tileWidth" value="32"
+                               placeholder="Enter tile width">
                     </div>
                     <div class="form-group">
                         <label for="tileHeight">Tile Height:</label>
-                        <input type="text" class="form-control" id="tileHeight" value="32" placeholder="Enter tile height">
+                        <input type="text" class="form-control" id="tileHeight" value="32"
+                               placeholder="Enter tile height">
                     </div>
-
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary" >Create Map</button>
+                        <button type="button" class="btn btn-primary" onclick="createJson()">Create Map</button>
                     </div>
                 </form>
 
@@ -70,6 +65,7 @@
 </div>
 
 <!-- Optional JavaScript -->
+<script src="javascript/addProject.js"></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
