--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -76,8 +76,8 @@
         </div>
 
         <div class="col-8 middle">
-            <div class="box" style="height:660px; width: 100%; position:relative; overflow: auto;">
-                <canvas id="canvas" style="border:1px solid"></canvas>
+            <div class="box" id="canvasStorage" style="height:660px; width: 100%; position:relative; overflow: auto;">
+<!--                <canvas id="canvas" style="border:1px solid"></canvas>-->
             </div>
         </div>
 
@@ -90,18 +90,6 @@
 
                     <div class="card-body" style="height: 300px; background-color: white; overflow: auto" >
                         <ul class="list-group list-group-flush" id="layerList">
-
-<!--                            <li class="list-group-item">-->
-
-<!--                                    <label>-->
-<!--                                        <b>Layer #1 </b>-->
-<!--                                    </label>-->
-
-<!--                                    <span class="fas fa-lock" style="float:right;margin-right:5px;margin-top: 5px;"></span>-->
-
-<!--                                    <span class="fas fa-eye" style="float:right;margin-right:20px; margin-top: 5px;"></span>-->
-
-<!--                            </li>-->
 
                         </ul>
 
