--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -77,7 +77,7 @@
 
         <div class="col-8 middle">
             <div class="box" id="canvasStorage" style="height:660px; width: 100%; position:relative; overflow: auto;">
-                <!--                <canvas id="canvas" style="border:1px solid"></canvas>-->
+
             </div>
         </div>
 
@@ -88,7 +88,7 @@
                         <center>Layers</center>
                     </div>
 
-                    <div  style="height: 300px; overflow: auto">
+                    <div style="height: 300px; overflow: auto">
                         <ul class="list-group list-group-flush" id="layerList" style="height: 300px">
 
                         </ul>
@@ -99,7 +99,6 @@
 
                         <i class="fas fa-arrow-up layerIcon"></i>
 
-
                         <i class=" fas fa-plus dropdown-toggle layerIcon" id="dropdownMenu2" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false"></i>
 
@@ -109,11 +108,9 @@
                             </button>
                         </div>
 
-                        <i class="fas fa-minus layerIcon"></i>
-
+                        <i class="fas fa-minus layerIcon" onclick="deleteLayer()"></i>
                     </div>
                 </div>
-
             </div>
             <!--            <br>-->
 
