--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -77,6 +77,7 @@
 
         <div class="col-8 middle">
             <div class="box" id="canvasStorage" style="height:660px; width: 100%; position:relative; overflow: auto;">
+                <canvas id="canvas"></canvas>
 
             </div>
         </div>
@@ -145,6 +146,7 @@
 <!-- Optional JavaScript -->
 <script src="js/addProject.js"></script>
 <script src="js/layerController.js"></script>
+
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
